// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<File/> > render File with Import and Export and print imports/exports 1`] = `
"import React from 'react'

export * from './index.ts'
"
`;

exports[`<File/> > render File with multiple sources 1`] = `
"export function test() {
  return true
}

const test = 2
"
`;

exports[`<File/> > render File with multiple sources 2`] = `
"export function test() {
  return true
}

const test = 2
"
`;

exports[`<File/> > render File with source and path, print 1`] = `
"export function test() {
  return true
}
"
`;

exports[`<File/> > render multiple Files 1`] = `
"const test = 1

const test2 = 2
"
`;

exports[`<File/> > render multiple Files 2`] = `
"const test = 1

const test2 = 2
"
`;

exports[`<File/> > render multiple Files 3`] = `
"const test = 1
"
`;

exports[`<File/> > render multiple Files 4`] = `
"const test2 = 2
"
`;

exports[`<File/> > render multiple Files 5`] = `
"const test = 1

const test2 = 2
"
`;

exports[`<File/> > render multiple Files 6`] = `
"const test = 1

const test2 = 2
"
`;

exports[`<File/> > render multiple Files 7`] = `
"const test = 1
"
`;

exports[`<File/> > render multiple Files 8`] = `
"const test2 = 2
"
`;
